# AudioHaze

./: .gitignore  Audio Signal Processing.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  dataBaseCreator.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  signals.db  test.py  utils.py
AudioHaze/: main.py  utils.py
AudioLib/: AudioEffect.py  AudioProcessing.py
Theme/: user.json
src/AudioHaze/: AudioEffect.py  AudioProcessing.py  MainInterface.py  Utils.py  __init__.py  __main__.py  audio_effect.py  audio_processing.py  main.py  main_interface.py  signals.db  utility.py  utils.py
src/AudioHaze/Data/: signals.db
