[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build]
artifacts = [
    "src/AudioHaze/signals.db",
]

[tool.hatch.version]
path = "src/AudioHaze/__about__.py"

[project]
name = "AudioHaze"
dynamic = ["version"]
authors = [
    { name = "Abdulrahman Shalaby", email = "abdoshalaby.dev@gmail.com" },
    { name = "Abdulrahman El Sharabasy", email = "abdo.make73@gmail.com" },
]
maintainers = [
    { name = "Abdulrahman Shalaby", email = "abdoshalaby.dev@gmail.com" },
    { name = "Abdulrahman El Sharabasy", email = "abdo.make73@gmail.com" },
]
description = "This Is A Simple GUI Application To Manipulate Audio Files By Modifying The Audio Wave Form And Display It Using Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy~= 1.24.2",
    "scipy~= 1.10.0",
    "matplotlib~= 3.7.0",
    "pyttsx3~= 2.90",
    "ttkbootstrap~= 1.10.1",
    "Pillow~= 9.4.0",
    "pydub~= 0.25.1",
    "pygame~= 2.1.3",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
keywords = ["GUI", "Tkinter", "Audio", "App", "Audio Editing", "Audio Processing"]
[project.urls]
homepage = "https://github.com/shalabycr7/AudioHaze"
repository = "https://github.com/shalabycr7/AudioHaze"
changelog = "https://github.com/shalabycr7/AudioHaze/blob/MainDist/CHANGELOG.md"
