[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AudioHaze"
dynamic = ["version"]
description = 'This Is A Simple GUI Application To Manipulate Audio Files By Modifying The Audio Wave Form And Display It Using Python'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["GUI", "Tkinter", "Audio", "App", "Audio Editing", "Audio Processing"]
authors = [
    { name = "shalabycr7", email = "abdoshalaby.dev@gmail.com" },
    { name = "Abdulrahman El Sharabasy", email = "abdo.make73@gmail.com" },
]

dependencies = [
    "numpy>=1.25.0",
    "scipy>=1.10.1",
    "matplotlib>=3.7.1",
    "pyttsx3>=2.90",
    "ttkbootstrap>=1.10.1",
    "Pillow>=9.5.0",
    "pydub>=0.25.1",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Documentation = "https://github.com/shalabycr7/audiohaze#readme"
Issues = "https://github.com/shalabycr7/audiohaze/issues"
Source = "https://github.com/shalabycr7/audiohaze"

[project.scripts]
AudioHaze = "AudioHaze.__main__:main"