[metadata]
name = AudioHaze
version = 0.2.8
author = shalabycr7
author_email = abdoshalaby.dev@gmail.com
description = This Is A Simple GUI Application To Manipulate Audio Files By Modifying The Audio Wave Form And Display It Using Python
long_description = file: README.md, CHANGELOG.md, LICENSE
classifiers =
    Framework :: Tkinter
    Programming Language :: Python :: 3

[options]
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
include = AudioHaze*
